# rvc

./: .gitignore  Cargo.toml  LICENSE  README.md  err.txt
src/: cli.rs  dirs.rs  main.rs  utils.rs
src/rcv/: mod.rs  repository.rs
src/rvc/: commit.rs  repository.rs
testrepo2/: .rvc  sampletext.txt
testrepo2/folder/: inside.txt
testrepo2/folder/another/: other.txt
