[package]
name = "rcv"
version = "0.1.0"
authors = ["LunaeSomnia (lunaesomnia@protonmail.com)"]
description = "Rust Version Control"
respository = "https://github.com/LunaeSomnia/rvc"
license = "MIT"
edition = '2021'

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
directories = "4.0.1"
serde = { version = "1.0.138", features = ["derive"] }
ron = "0.7.1"