[package]
name = "rvc"
version = "0.1.0"
authors = ["LunaeSomnia (lunaesomnia@protonmail.com)"]
description = "Rust Version Control"
respository = "https://github.com/LunaeSomnia/rvc"
license = "MIT"
edition = '2021'

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.138", features = ["derive"] }
ron = "0.7.1"
colored = "2.0.0"
regex = "1.5.6"
diff = "0.1.13"
chrono = "0.4.19"